# ROS2_Test

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/acbba/share/acbba/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/acbba/share/acbba/cmake/: acbbaConfig.cmake
install/acbba/share/ament_index/resource_index/parent_prefix_path/: acbba
install/auction_node/lib/auction_node/: task_publisher
install/auction_node/share/ament_index/resource_index/package_run_dependencies/: auction_node
install/auction_node/share/auction_node/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/auction_node/share/auction_node/cmake/: auction_nodeConfig.cmake
install/cbba/share/ament_index/resource_index/package_run_dependencies/: cbba
install/cbba/share/ament_index/resource_index/parent_prefix_path/: cbba
install/cbba/share/cbba/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cbba/share/cbba/cmake/: cbbaConfig-version.cmake  cbbaConfig.cmake
install/cbba/share/cbba/environment/: ament_prefix_path.dsv  path.dsv
install/custom_interfaces/include/custom_interfaces/custom_interfaces/msg/: auctioninfo.h  auctioninfo.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  status.h  status.hpp  task.h  task.hpp  tasklist.h  tasklist.hpp  vehiclestate.h  (+1 more)
install/custom_interfaces/share/custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/custom_interfaces/share/custom_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  custom_interfacesConfig-version.cmake  custom_interfacesConfig.cmake  custom_interfaces__rosidl_typesupport_cExport.cmake  custom_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_custom_interfaces__rosidl_generator_cExport.cmake  export_custom_interfaces__rosidl_generator_cppExport.cmake  export_custom_interfaces__rosidl_generator_pyExport.cmake  export_custom_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/custom_interfaces/share/custom_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/custom_interfaces/share/custom_interfaces/msg/: Auctioninfo.idl  Auctioninfo.msg  Status.idl  Status.msg  Task.idl  Task.msg  Tasklist.idl  Tasklist.msg  Vehiclestate.idl  Vehiclestate.msg
install/custom_interfaces/share/custom_interfaces/srv/: CheckName.idl  CheckName.srv  CheckName_Request.msg  CheckName_Response.msg
install/multi_agent_comm/lib/multi_agent_comm/: comm  comm_qos  count  multi_pub  multi_thread  multi_thread1  self_loop
install/multi_agent_comm/share/multi_agent_comm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/multi_agent_comm/share/multi_agent_comm/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_multi_agent_comm__rosidl_generator_cExport-noconfig.cmake  export_multi_agent_comm__rosidl_generator_cppExport.cmake  export_multi_agent_comm__rosidl_generator_pyExport.cmake  export_multi_agent_comm__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_multi_agent_comm__rosidl_typesupport_fastrtps_cppExport.cmake  multi_agent_commConfig-version.cmake  multi_agent_commConfig.cmake  multi_agent_comm__rosidl_typesupport_cExport.cmake  multi_agent_comm__rosidl_typesupport_cppExport-noconfig.cmake  multi_agent_comm__rosidl_typesupport_introspection_cExport.cmake  multi_agent_comm__rosidl_typesupport_introspection_cppExport-noconfig.cmake  multi_agent_comm__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/multi_agent_comm/share/multi_agent_comm/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/multi_agent_comm/share/multi_agent_comm/msg/: AgentMessage.idl  AgentMessage.msg
install/srv_test/lib/srv_test/: client  client_node  server  server_node  service_node
install/srv_test/share/srv_test/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/acbba/: CMakeLists.txt
src/acbba/src/: acbba.cpp  assignment.cpp  task.cpp
src/auction/: CMakeLists.txt  package.xml
src/auction/src/: auction.cpp  task_publisher.cpp
src/cbba/: CMakeLists.txt  package.xml
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: Task.msg  UVState.msg
src/custom_interfaces/srv/: CheckName.srv
src/multi_agent_comm/: CMakeLists.txt
src/multi_agent_comm/src/: comm.cpp  comm_qos.cpp  count.cpp  multi_thread1.cpp  multi_thread2.cpp  multi_thread_pub.cpp  self_loop.cpp
src/srv_test/: CMakeLists.txt  package.xml
src/srv_test/src/: client.cpp  client_node.cpp  server.cpp  server_node.cpp
(+132 files in other folders)
